samain ko andhika